style.css
:root {
    /** Declaring Global Color Variables*/
    --black_900_01: #000000;
    --white_a700_01: #ffffff;
    --gray_500: #919191;
    --deep_orange_a700_01: #e31615;
    /** Space Variables*/
    --space-lg: 12px;
    --space-xl: 14px;
    --space-xs: 8px;
    --space-2xl: 16px;
    --space-3xl: 18px;
    --space-4xl: 20px;
    --space-5xl: 22px;
    --space-6xl: 30px;
    --space-7xl: 34px;
    /** Shadow Variables */
    --shadow-lg: 0 0 13px 5px #00000029;
    /** Radius Variables */
    --radius-xs: 8px;
}

/** Setting Root Level Properties*/
*,
*::after,
*::before {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Work Sans' sans-serif;
}

img {
    max-width: 100%;
    height: auto;
}

a {
    text-decoration: none;
    display: block;
}

ul {
    margin: 0;
    padding: 0;
    margin-inline: unset !important;
    list-style: none;
}

/** header section CSS starts here */
.body-main-container {
    width: 100%;
    position: relative;
    align-content: center;

    @media only screen and (max-width: 1440px) {
        height: auto;
    }
}

.body-inner-container {
    background-color: var(--white_a700_01);
    width: 100%;
}

.header {
    z-index: 2;
    position: relative;
}

.header__top-row {
    background-color: var(--white_a700_01);
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: var(--space-4xl);
    padding: 6px 98px;

    @media only screen and (max-width: 1440px) {
        padding-right: 32px;
        padding-left: 32px;
    }

    /** Handling Menu UI for Mobile Devices */
    @media only screen and (max-width: 550px) {
        flex-direction: column;
        padding-right: var(--space-2xl);
        padding-left: var(--space-2xl);
    }
}

.header__logo {
    height: 68px;
    margin-top: 18px;
    align-self: flex-end;
    width: 118px;
    object-fit: contain;
}

.header__actions {
    margin-right: 60px;
    display: flex;
    align-items: center;


    @media only screen and (max-width:1440px) {
        margin-right: 0px;
    }

    /** Handling Menu UI for Mobile Devices */
    @media only screen and (max-width:550px) {
        flex-direction: column;
        gap: 20px;
    }
}

.header__signup {
    color: var(--black_900_01) !important;
    text-transform: uppercase;
    width: 100%;

    @media only screen and (max-width:1440px) {
        font-size: 13px;
    }
}

.header__login-button {
    color: var(--white_a700_01) !important;
    margin-left: 10px;
    padding-left: var(--space-7xl);
    padding-right: var(--space-7xl);
    text-transform: uppercase;
    font-size: 16px;
    font-weight: 700;
    background-color: var(--gray_500) !important;
    height: 40px;
    min-width: 120px;
    border-radius: 20px !important;
    border-color: transparent;

    @media only screen and (max-width:1440px) {
        font-size: 13px;
    }

    @media only screen and (max-width:550px) {
        padding-left: var(--space-2xl);
        padding-right: var(--space-2xl);
        margin-left: 0px;
    }
}

.header__user-icon {
    height: 40px;
    margin-left: 30px;
    width: 38%;
    object-fit: contain;

    @media only screen and (max-width:550px) {
        width: 100%;
        margin-left: 0px;
    }
}

.header__main-nav {
    background-color: var(--gray_500);
    display: flex;
    justify-content: center;
}

.header__nav-row {
    margin-top: 14px;
    display: flex;

    @media only screen and (max-width: 1440px) {
        padding-right: var(--space-4xl);
        padding-left: var(--space-4xl);
    }
}

.header__nav-menu {
    gap: 24px;
    display: flex;
    align-items: flex-start;
}

.header__menu-item {
    gap: var(--space-xl);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header__menu-indicator {
    height: 2px;
    background-color: var(--white_a700_01);
    width: 42px;
}

.dhi-group {
    cursor: pointer;

    &:hover> :last-child {
        display: block;
    }
}

.header__submenu {
    gap: var(--space-xs);
    display: flex;
    align-items: center;
    cursor: pointer;
}

.header__submenu-link {
    text-transform: uppercase;
    color: white;

    @media only screen and (max-width: 1440px) {
        font-size: 13px;
    }
}

.header__submenu-icon {
    height: 6px;
    width: 14px;
}

.dhi-group-1 {
    position: absolute;
    top: auto;
    min-width: 200px;
    padding-top: var(--space-lg);
    z-index: 99;
    display: none;

    group-hover {
        display: block;
    }
}

.menu-container {
    background-color: var(--white_a700_01);
    box-shadow: var(--shadow-lg);
    width: 100%;
    padding: var(--space-4xl);
    border-radius: var(--radius-xs);
}

.menu-group {
    gap: var(--space-6xl);
    display: flex;
}

.header-menu-headingxs {
    color: white;
    font-weight: 700;
    text-transform: uppercase;
}

.header-menu-heading {
    color: white;
    text-transform: uppercase;
}

/** header section CSS endss*/

/** hero section CSS starts*/
.frame-1000004694 {
    margin-top: -50px;
    overflow: scroll;
    position: relative;
}

.component-11 {
    overflow-x: scroll;
    width: 1600px;
}

.group-1000004977 {
    width: 1600px;
    background: linear-gradient(180deg, #252525, #000000);
}

.group-8 {
    height: 748px;
    background-image: url("/images/bgImage.svg");
    background-size: cover;
    background-repeat: no-repeat;
    padding: 54px;

    @media only screen and (max-width: 1440px) {
        height: auto;
    }

    /** Mobile specific CSS*/
    @media only screen and (max-width: 550px) {
        padding: var(--space-2xl);
    }
}

.section-3 {
    margin-top: 148px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.section__content-3 {
    height: 488px;
    align-self: stretch;
    position: relative;
    align-content: center;

    @media only screen and (max-width: 1440px) {
        height: auto;
    }
}

.slider {
    max-width: 100%;
    display: flex;
    flex: 1;
}

.slider__item {
    padding-left: 56px;
    padding-right: 56px;
    display: flex !important;
    justify-content: center;

    @media only screen and (max-width: 1440px) {
        padding-left: var(--space-4xl);
        padding-right: var(--space-4xl);
    }
}

.product-registration {
    gap: var(--space-2xl);
    display: flex;
    width: 88%;
    flex-direction: column;
    align-items: center;

    @media only screen and (max-width: 1440px) {
        width: 100%;
    }
}

.product-registration__title {
    letter-spacing: 2.16px;
    color: var(--white_a700_01) !important;

    @media only screen and (max-width: 1440px) {
        font-size: 48px;
    }
}

.product-registration__button {
    color: var(--white_a700_01) !important;
    padding-left: var(--space-3xl);
    padding-right: var(--space-3xl);
    text-transform: uppercase;
    font-size: 16px;
    font-weight: 700;
    gap: var(--space-5xl);
    background-color: var(--deep_orange_a700_01) !important;
    box-shadow: 0 3px 6px 0 #00000028 !important;
    height: 50px;
    min-width: 212px;
    border-radius: 24px !important;
    display: flex;
    justify-content: center;
    align-items: center;
    border-color: transparent;

    @media only screen and (max-width: 1440px) {
        font-size: 13px;
    }
}

.right-icon-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 28px;
    height: 30px;
}

.arrow_left {
    width: 28px;
    height: 30px;
    object-fit: contain;
}

.product-registration__image {
    height: 250px;
    width: 100%;
    object-fit: cover;

    @media only screen and (max-width: 1440px) {
        height: auto;
    }
}

.slider-controls {
    flex: 1;
    display: flex;
    justify-content: space-between;
    position: absolute;
    top: 29%;
    right: 0px;
    left: 0px;
    margin-left: auto;
    margin-right: auto;
    gap: var(--space-4xl);
}


.slider-controls__previous {
    height: 60px;
    border-color: transparent;
    transform: rotate(-180deg);
    background-color: black;
    width: 60px;
    border-radius: 30px !important;
}

.slider-controls__next {
    height: 60px;
    border-color: transparent;
    background-color: black;
    width: 60px;
    border-radius: 30px !important;
}

.pager-indicator-wrapper {
    margin-top: -4px;
    padding-left: 562px;
    padding-right: 562px;
    z-index: 1;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: flex-start;

    @media only screen and (max-width: 1440px) {
        padding-left: var(--space-4xl);
        padding-right: var(--space-4xl);
    }

}

.pager-indicator-wrapper__indicator {
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 99;

    &>.swiper-paggination-buttet {
        background-color: var(--white_a700_01);
        width: 30px;
        height: 2px;
        cursor: pointer;
        display: inline-block;
        margin-right: 16.75px;
    }

    &>.swiper-paggination-buttet-active {
        background-color: var(--gray_500);
        width: 30px;
        height: 4px;
        cursor: pointer;
        display: inline-block;
        margin-right: 16.75px;
    }
}

/** hero section CSS endss*/

